Fix : Header issues overlap content

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -17,9 +17,10 @@
 
 body {
   margin: 0;
+  padding-top: 3.5rem;
   display: flex;
   place-items: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 3.5rem);
 }
 
 #app {
